--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite",
+  "name": "ba-docs",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -8,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "postcss-nesting": "^12.1.0",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.11"
   }
 }
